@startuml

class Administrator
class Parameter {
-int code
-String shortName
-String description
-double upperReferenceValue
-double lowerReferenceValue

+setShortName(shortName)
+setCode(code)
+setDescription(description)
+setUpper(upperReferenceValue)
+setLower(lowerReferenceValue)
+getShortName()
+getCode()
+getDescription()
+setUpper(upperReferenceValue)
+setLower(lowerReferenceValue)

}

class CreateNewParameterUI{
}

class CreateNewParameterController{
+createNewParameter(shortName, code, description)
+getCategoryList()
+saveParameter()
}

class Company{
ArrayList<Category>

+getCategoryList()
}

class Category {
-String code
-String description
-int nhsID
-ArrayList<Parameter> parameterList

+validateParameter(par)
+saveParameter(par)
+addParameter(par)
}

Administrator ...> CreateNewParameterUI
CreateNewParameterUI ...> CreateNewParameterController
CreateNewParameterController ...> Parameter
CreateNewParameterController ...> Company
Category "*"--"1" Parameter : presented under <
Parameter "*"-up-"1" Administrator : specified by >
Company"1 "-"1..*" Administrator : > employs

@enduml